--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "express": "^4.15.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-universal-component": "^2.5.0",
+    "redux": "^3.7.2",
     "webpack-flush-chunks": "^1.1.23"
   },
   "devDependencies": {
