--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.1.2",
     "react-universal-component": "^2.5.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "webpack-flush-chunks": "^1.1.23"
   },
   "devDependencies": {
