--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "extract-css-chunks-webpack-plugin": "^2.0.16",
+    "file-loader": "^0.11.2",
     "node-noop": "^1.0.0",
     "prettier": "^1.5.3",
     "rimraf": "^2.6.1",
