--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-universal-import": "^1.2.6",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.5",
     "extract-css-chunks-webpack-plugin": "^2.0.16",
     "file-loader": "^0.11.2",
     "node-noop": "^1.0.0",
