Fix css hot module reloading
Pushed top level async components like Search and Advert to a seperate folder exporting the default so chunks are created properly.

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-    "presets": ["env", "react"],
-    "plugins": ["syntax-dynamic-import", "universal-import", "transform-class-properties"]  
-  }
+  "presets": [
+    "env",
+    "react"
+  ],
+  "plugins": [
+    "syntax-dynamic-import",
+    "universal-import",
+    "transform-class-properties"
+  ]
+}
