--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-universal-component": "^2.5.0",
+    "react-universal-component": "^2.5.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sanitize.css": "^5.0.0",
@@ -25,14 +25,14 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-universal-import": "^1.2.6",
+    "babel-plugin-universal-import": "^1.2.7",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.5",
     "eslint": "^4.5.0",
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-prettier": "^2.2.0",
-    "extract-css-chunks-webpack-plugin": "^2.0.16",
+    "extract-css-chunks-webpack-plugin": "^2.0.17",
     "file-loader": "^0.11.2",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.4",
@@ -47,10 +47,10 @@
     "write-file-webpack-plugin": "^4.1.0"
   },
   "scripts": {
-    "start": "yarn clean && yarn start:server:dev",
+    "start": "yarn cleanfiles && yarn start:server:dev",
     "start:server:dev": "NODE_ENV=development node --inspect server/index.js",
     "precommit": "lint-staged",
-    "clean": "rimraf dist"
+    "cleanfiles": "rimraf dist"
   },
   "lint-staged": {
     "*.js": [
