--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-universal-component": "^2.5.2",
+    "recompose": "^0.25.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sanitize.css": "^5.0.0",
